# scriptum

./: CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
include/scriptum/: overloaded.hpp
include/scriptum/frontend/lexer/: token.hpp
include/scriptum/frontend/parser/: ast.hpp  expression_parser.hpp  parser_context.hpp  program_parser.hpp  statement_parser.hpp
include/scriptum/runtime/: environment.hpp  evaluate_expression.hpp  interpreter.hpp  return_signal.hpp  value.hpp
include/scriptum/stdlib/: globals.hpp
src/: main.cpp
src/frontend/lexer/: helpers.ts  tokenize.cpp  tokenize.ts  types.ts
src/frontend/parser/: ast.cpp  ast.ts  expressionParser.ts  expression_parser.cpp  parserContext.ts  parser_context.cpp  programParser.ts  program_parser.cpp  statementParser.ts  statement_parser.cpp  types.ts
src/runtime/: environment.cpp  environment.ts  evaluate_expression.cpp  interpreter.cpp  interpreter.ts  return_signal.cpp  signals.ts  value.cpp
src/stdlib/: globals.cpp  globals.ts  index.ts
src/testFiles/: test1.txt
